--- a/ReportGenerator.Client.Wpf/App.xaml
+++ b/ReportGenerator.Client.Wpf/App.xaml
@@ -8,6 +8,17 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Panuon.UI.Silver;component/Control.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Style x:Key="PropertyLabelBackground" TargetType="Label">
+                <Setter Property="Background">
+                    <Setter.Value>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                            <GradientStop Color="#6a3093"  Offset= "0" />
+                            <GradientStop Color="#7744ff" Offset="1" />
+                            
+                        </LinearGradientBrush>
+                    </Setter.Value>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
