--- a/ReportGenerator.Client.Wpf/Controls/FormTextItem.xaml
+++ b/ReportGenerator.Client.Wpf/Controls/FormTextItem.xaml
@@ -1,4 +1,4 @@
-<Grid x:Class="ReportGenerator.Client.Wpf.Controls.FormTextItem"
+﻿<Grid x:Class="ReportGenerator.Client.Wpf.Controls.FormTextItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,14 +6,22 @@
     xmlns:local="clr-namespace:ReportGenerator.Client.Wpf.Controls"
     xmlns:pu="clr-namespace:Panuon.UI.Silver;assembly=Panuon.UI.Silver"
     mc:Ignorable="d"
-    Height="32">
+    Height="32" Margin="6 8" d:DesignWidth="200">
     <Grid.ColumnDefinitions>
         <ColumnDefinition Width="1*"/>
-        <ColumnDefinition Width="2*"/>
+        <ColumnDefinition Width="3*"/>
     </Grid.ColumnDefinitions>
-    <pu:TagControl Width="80" Grid.Column="0">
-        <pu:TagItem Content="Label" Background="#6AC2FF"
-            Removable="false"/>
-    </pu:TagControl>
-    <TextBox Text="Haha" Grid.Column="1"/>
+    <Label Grid.Column="0" Margin="0 0 12 0" VerticalAlignment="Center"
+            Style="{StaticResource PropertyLabelBackground}"
+                   Foreground="White"
+                    Padding="6" Height="32"
+                  Content="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=local:FormTextItem},Path=Header}"  
+                  >
+        <Label.Effect>
+            <DropShadowEffect ShadowDepth="-4" BlurRadius="8" Color="LightGray"/>
+        </Label.Effect>
+    </Label>
+    <TextBox Grid.Column="1" 
+             pu:TextBoxHelper.IsClearButtonVisible="True"
+             Text="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=local:FormTextItem},Path=Text}"/>
 </Grid>
