--- a/ReportGenerator.Client.Wpf/App.xaml
+++ b/ReportGenerator.Client.Wpf/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="ReportGenerator.Client.Wpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:pu="clr-namespace:Panuon.UI.Silver;assembly=Panuon.UI.Silver"
              xmlns:local="clr-namespace:ReportGenerator.Client.Wpf"
             >
     <Application.Resources>
@@ -14,7 +15,6 @@
                         <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
                             <GradientStop Color="#6a3093"  Offset= "0" />
                             <GradientStop Color="#7744ff" Offset="1" />
-                            
                         </LinearGradientBrush>
                     </Setter.Value>
                 </Setter>
